List.get(0)をgetFirst()に変更してコードを最適化
- PhysicalNameGeneratorRunnerで数値インデックスが意味を持たない箇所の.get(0)を.getFirst()に変更
- コマンドライン引数の最初の値を取得する処理で適用
  - dictionary, format, tokenizer, naming, input, outputオプション
- 他のファイルは.get(1), .get(2)等も使用しており数値指定に意味があるため変更せず

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>